/* 
  Localizable.strings
  FSPO-Viper

  Created by Николай Борисов on 27/07/2018.
  Copyright © 2018 Николай Борисов. All rights reserved.
*/
"Вход" = "Login";
"Расписание" = "Schedule";
"Логин" = "Login";
"Пароль" = "Password";
"Новости" = "News";
"Профиль" = "Profile";
"Выход" = "Exit";
//"По дате" = "BY DATE";
//"По предметам" = "BY SUBJECTS";
//"Подробнее" = "MORE";
"По дате" = "By Date";
"По предметам" = "By Subjects";
"Подробнее" = "More";
"Средний балл" = "Average score";
"Долгов" = "Debts";
"Посещения" = "Visits";
"Родители" = "Parents";
"Завилейская Анастасия" = "Zavileyskaya Anastasia";
"Ошибка при получении данных" = "Getting data error";
"Повторить" = "Try again";
"Изменения в расписании" = "Schedule changes";
"Журнал" = "Journal";
"Сообщения" = "Messages";
"Сегодня в " = "Today at ";
"Вчера в " = "Yesterday at ";
"сем" = "sem";
"Оценка" = "Note";
"Аттестация" = "Attestation";
"Всего" = "All";
"Был" = "Presence";
"Не был" = "Absence";
"Понедельник" = "Monday";
"Вторник" = "Tuesday";
"Среда" = "Wednesday";
"Четверг" = "Thursday";
"Пятница" = "Friday";
"Суббота" = "Saturday";
"курс" = "course";
"Сообщение" = "Message";
"В этот день занятий не было" = "There were no lessons in specified date";
"Присутствие" = "Presence";
"Отсутствие" = "Absence";
"лекция" = "lection";
"лабораторная" = "laboratory";
"аттестация" = "attestation";
"зачёт" = "setoff";
"Зачёт" = "Pass";
"Незачёт" = "Fail";
"экзамен" = "exam";
"практическая" = "practice";
"контрольная работа" = "test";
"Тип пары" = "Lesson type";
"Опоздание" = "Delay";
"Ранний уход" = "Premature leaving";
"Опоздание и ранний уход" = "Delay and Premature leaving";
"Удаление с занятия" = "Drop off";
"Обучался(лась) в Сегрисе" = "Studied in Segrys";
"Не обучался(лась) в Сегрисе" = "Not studied in Segrys";
"семестр" = "semester";
"классов" = "classes";
"Не указано" = "Unspecified";
"Все" = "Both";
"Чётная" = "Even";
"Нечётная" = "Odd";
"Занятий нет" = "No lessons";
"Ошибка при обновлении уведомлений" = "Error during notifications update";
"Неправильные данные!" = "Wrong credentials!";
"Ошибка" = "Error";
"Подтверждение личности" = "Proof of identity";
"Подтвердите личность" = "Confirm identity";
"Face ID/Touch ID не может настроиться" = "Face ID/Touch ID may not be configured";
"Возникла ошибка" = "An error occurred";
"Отменено пользователем" = "Canceled by user";
"Введите пароль" = "Enter password";
"Начальный экран" = "Home screen";
"Уведомления" = "Notifications";
"Аутентификация" = "Authentication";
"Кэш" = "Cache";
"Связь с разработчиком" = "Contact developer";
"Прокрутка к сегодняшнему дню" = "Scrolling to today";
"Очистить расписание уведомлений" = "Clear notifications schedule";
"Настройки уведомлений" = "Notifications settings";
"Очистить кэш" = "Clear cache";
"Группа VK" = "VK Group";
"Выход" = "Exit";
"Очистить расписание?" = "Clear schedule?";
"Очистить" = "Clear";
"Расписание уведомлений очищено" = "Notifications schedule has been cleared";
"Отмена" = "Cancel";
"Ошибка очистки" = "Erroe while clearing";
"Кэш очищен" = "Cache has been cleared";
"Точно выйти?" = "Are you sure?";
"Выйти" = "Exit";
"Не поддерживается на Вашем устройстве" = "Your device is not supported";
"Разработчик: Борисов Николай" = "Developer: Borisov Nikolay";
"Версия" = "Version";
"Типы уведомлений" = "Notification types";
"Уведомление о занятии за" = "Send notification";
"Звук уведомления" = "Notification sound";
"до занятия" = "before lesson";
"О предстоящих занятиях" = "Upcoming lessons";
"минут" = "minutes";
"Стандартный" = "Default";
"Кастомный" = "Custom";
"Настройки" = "Settings";
"Нет соединения с интернетом" = "No internet connection";
"Скрыто" = "Hidden";
"Конечно!" = "Of course";
"Не нужно" = "No, thanks";
"Включить подтверждение личности при входе?" = "Allow the app to verify your identity on the startup?";
"Сообщить об ошибке" = "Report a bug";
"Студент" = "Student";
"Консультации" = "Consultations";
"Сегодня" = "Today";
"Вчера" = "Yesterday";
"Доступно обновление приложения в App Store" = "Update available in the App Store";
"Поиск" = "Search";
"Преподаватели" = "Teachers";
"Студенты" = "Students";
"Препод" = "Teacher";
"Создать занятие" = "Create lesson";
"Проведённые занятия" = "Past lessons";
"Список студентов" = "Students list";
"Не найдено" = "Nothing found";
