...
            width: UIScreen.main.bounds.width - width - 16,
            sublayout: LabelLayout(
                text: subject,
                font: UIFont.ITMOFont!,
                alignment: .centerLeading,
                config: { label in
                    label.accessibilityIdentifier = "cellLabel"
                    label.lineBreakMode = .byWordWrapping
                    label.textColor = .black
                    label.backgroundColor = .white
            })
        )
        super.init(
...
